# OOP_labs

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  main.cpp  run_tests.sh
lab1/include/: delete_letters.h
lab1/src/: delete_letters.cpp
lab1/test/: tests01.cpp
lab2/: CMakeLists.txt  README.md  main.cpp  run_program.sh
lab2/include/: Eleven.h
lab2/src/: Eleven.cpp
lab2/test/: tests02.cpp
lab3/: CMakeLists.txt  README.md  run_program.sh
lab3/include/: Figure.h  Hexagon.h  Octagon.h  Pentagon.h  Point.h  array_func.h  double_equal.h
lab3/src/: Figure.cpp  Hexagon.cpp  Octagon.cpp  Pentagon.cpp  Point.cpp  array_func.cpp
lab3/test/: main.cpp  tests03.cpp
lab4/: CMakeLists.txt  README.md
lab4/include/: Array.h  Figure.h  Hexagon.h  Octagon.h  Pentagon.h  Point.h  array_func.h
lab4/src/: main.cpp
lab4/test/: main.cpp  tests04.cpp  ugolniki.txt
lab5/: CMakeLists.txt  README.md
lab5/include/: fixed_block_resource.h  pmr_dlist.h
lab5/src/: fixed_block_resource.cpp  main.cpp
lab5/test/: tests05.cpp
lab6/: CMakeLists.txt  README.md
lab6/include/: factory.h  game.h  npc.h  observer.h  visitor.h
lab6/src/: factory.cpp  game.cpp  main.cpp  npc.cpp  observer.cpp  visitor.cpp
lab6/test/: tests06.cpp
lab7/: CMakeLists.txt  README.md  run_tests.sh
lab7/include/: game.h  npc.h  observer.h  visitor.h
lab7/src/: game.cpp  main.cpp  npc.cpp  observer.cpp
lab7/test/: tests07.cpp
